# allocators

./: README.md  allocators.cabal
.github/workflows/: ci.yaml
src/: PoolAllocator.hs
src/main/: PoolAllocator.hs
src/test/: PoolAllocatorTests.hs
