cabal-version:      3.0
name:               allocators
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Александр Смоликов
maintainer:         aleksandrsmolikov107@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PoolAllocator
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0, array
    hs-source-dirs:   src/main
    default-language: Haskell2010

test-suite allocators-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src/test/
    main-is:          PoolAllocatorTests.hs
    build-depends:
        base ^>=4.18.3.0,
        allocators, 
        hspec,
        array
